<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.lst.BungActivity">
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_action_archive"
        android:orderInCategory="200"
        android:title="@string/bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add2Note"
        android:icon="@drawable/ic_action_note"
        android:orderInCategory="400"
        android:title="@string/note"
        app:showAsAction="ifRoom" />

</menu>
