<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#23000000"
    android:paddingBottom="4dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp">

    <ImageButton
        android:contentDescription="@string/desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/navigation_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:text="@string/kiknon"
        android:background="#00ffffff" />

    <ImageButton
        android:contentDescription="@string/desc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/navigation_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forward"
        android:text="@string/abanah"
        android:background="#00ffffff" />

</RelativeLayout>
