<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteEditLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/gradient"/>
    <TextView
        android:id="@+id/noteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/note_bawlna"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title_hint"
            android:background="@drawable/abc_edit_text_material"
            tools:ignore="PrivateResource" />
    </LinearLayout>

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/enter_note_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/abc_edit_text_material"
        tools:ignore="PrivateResource">
        <requestFocus/>
    </EditText>

</LinearLayout>