<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <View
        android:id="@+id/font_view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient" />

    <TextView
        android:id="@+id/fontsize_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/font_sulian"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font_view"
        android:contentDescription="@string/desc"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_action_font"
        android:tint="?attr/colorAccent" />

    <SeekBar
        android:id="@+id/change_font_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />


    <TextView
        android:id="@+id/bright_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/bright"
        android:paddingBottom="20dp"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/font1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_font_seekbar"
        android:contentDescription="@string/desc"
        android:paddingBottom="5sp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_action_bright_low"
        android:tint="?attr/colorAccent" />

    <SeekBar
        android:id="@+id/brightbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font1"
        android:paddingTop="20dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/font2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightbar"
        android:contentDescription="@string/desc"
        android:paddingBottom="5sp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_action_fullscreen"
        android:tint="?attr/colorAccent" />

    <TextView
        android:id="@+id/fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font2"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/fullscreen"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/themeToggle"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullscreen"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/themeToggle"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/font_help"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>