<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            android:foreground="@drawable/card_foreground"
            card_view:cardBackgroundColor="?android:attr/windowBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">
        <TextView
            android:id="@+id/header"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/third_party_title"
            android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_header"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            android:foreground="@drawable/card_foreground"
            card_view:cardBackgroundColor="?android:attr/windowBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/lib1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:autoLink="all"
                android:clickable="true"
                android:gravity="start"
                android:linksClickable="true"
                android:text="@string/third_party1" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            android:foreground="@drawable/card_foreground"
            card_view:cardBackgroundColor="?android:attr/windowBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/lib2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autoLink="all"
                android:clickable="true"
                android:gravity="start"
                android:linksClickable="true"
                android:text="@string/third_party2" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>